--- a/src/EditInfo.form
+++ b/src/EditInfo.form
@@ -194,7 +194,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="jTextField1">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Full_Name "/>
+            <Property name="text" type="java.lang.String" value="f"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
