--- a/src/Login.form
+++ b/src/Login.form
@@ -104,6 +104,13 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JPasswordField" name="passcode">
+          <Properties>
+            <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
+              <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
+                <LineBorder roundedCorners="true"/>
+              </Border>
+            </Property>
+          </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="passcodeActionPerformed"/>
           </Events>
@@ -128,7 +135,7 @@
           </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="230" y="350" width="128" height="50"/>
+              <AbsoluteConstraints x="230" y="350" width="130" height="50"/>
             </Constraint>
           </Constraints>
         </Component>
